# certificate-maker

./: .gitignore  .pylintrc  CertificateMaker.spec  README.md  icon.icns  pyproject.toml  requirements.txt  test.py
Certificates/References/: Outlook.txt
certificate_maker/: __main__.py
certificate_maker/src/: exception_types.py
certificate_maker/src/data/: attorney.py  certificate.py  cle_class.py  emails.py  pdf_flatten.py  ref.py  webinar.py
certificate_maker/src/data/on_demand/: on_demand.py  report_entry.py
certificate_maker/src/gui/: primary_window.py  tab_panel.py  terminal_panel.py
src/: __main__.py  attorney.py  cle_class.py  webinar.py
